# factor-investing

./: .gitignore  Dockerfile  README.md  Ticker.csv  main.py  pyproject.toml
investing/: __init__.py
investing/api/dependency/: utils.py
investing/api/routers/bulk/: __init__.py  tickers.py
investing/api/routers/dataset/: __init__.py  indicators.py
investing/api/routers/per_security/: __init__.py  tickers.py  tickers_controllers.py
investing/core/: data.py  exception.py  models.py  utils.py
investing/core/db/: __init__.py  _database.sql  _db_utils.py  _schema.sql  _sql_query.py  _table.sql
investing/core/indicator/: _base.py  price_trend.py
pipeline/: setup_db.py  ticker_history_data_insert.py  tickers.csv  tickers_nse.csv  tickers_nse_500.csv
tests/test_api/: test_root.py
tests/test_api/test_per_security/: test_ticker.py
tests/test_core/: test_data.py
