[tool.poetry]
name = "factor-investing"
version = "0.3.1"
description = ""
authors = ["Akash Desarda <desardaakash@gmail.com>"]
packages = [
    { include = "investing" },
]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
fastapi = { extras = ["standard"], version = "^0.115.5" }
yfinance = "^0.2.50"
polars = "^1.16.0"
sqlglot = "^25.32.1"
pydantic = "^2.10.2"
adbc-driver-postgresql = "^1.3.0"
pyarrow = "^18.1.0"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
alive-progress = "^3.2.0"
altair = "^5.5.0"
stock-indicators = "^1.3.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
